tests/compile_fail/endpoint_missing_authorize.stderr
error: acube endpoint requires an authorization declaration.
         Add #[acube_authorize(scopes = [...])] or #[acube_authorize(public)] to explicitly opt out.
 --> $WORKSPACE/tests/compile_fail/endpoint_missing_authorize.rs
  |
  | async fn test_handler(_ctx: AcubeContext) -> AcubeResult<Json<serde_json::Value>, Never> {
  |          ^^^^^^^^^^^^
